<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.echo.iNote.EditNote">
    <item android:id="@+id/action_reader_mode"
        android:title="@string/read"
        android:orderInCategory="99"
        app:showAsAction="never" />

    <item android:id="@+id/action_reminder"
        android:title="@string/add_reminder"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="101"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="102"
        android:title="@string/delete_note"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="103"
        android:title="@string/clear_note"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore"
        android:orderInCategory="104"
        android:title="@string/discard_changes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="105"
        android:title="@string/cancel"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send_email"
        android:orderInCategory="106"
        android:title="@string/send_as_mail"
        app:showAsAction="never" />
    <item
        android:id="@+id/send_as_general"
        android:orderInCategory="107"
        android:title="Share ( Multi-Choice )"
        app:showAsAction="never" />
    <item
        android:id="@+id/send_to_contact"
        android:orderInCategory="108"
        android:title="@string/send_to_contact"
        app:showAsAction="never" />
</menu>
