<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/navigation_shade_design"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/top_menu">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_notes_black_24dp"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_title_view"
            android:icon="@drawable/ic_title_view_black_24dp"
            android:title="@string/title_view" />
        <item
            android:id="@+id/nav_sort_by_categories"
            android:icon="@drawable/ic_sort_by_category_24dp"
            android:title="@string/sort_by_category" />
        <item
            android:id="@+id/nav_private_notes"
            android:icon="@drawable/profile_password_icon_24dp"
            android:title="Private Notes"
            />
    </group>

<group
    android:id="@+id/nav_middle_menu"
    android:checkableBehavior="single">
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_contacts"
                android:title="Contacts"
                android:icon="@drawable/ic_chats_24dp"/>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate"
                android:title="@string/rate"
                android:icon="@drawable/ic_rate_24dp"/>
        </menu>
    </item>

</group>
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about_24dp"
        android:title="@string/about" />
    <item
        android:id="@+id/nav_log_out"
        android:icon="@drawable/nav_log_out_icon_24dp"
        android:title="Log Out"
        />
    <item
        android:title="Sign In"
        android:icon="@drawable/nav_log_out_icon_24dp"
        android:id="@+id/nav_sign_in"
        />
</menu>
